--- a/aula016ex/ex01/aula014ex copy.html
+++ b/aula016ex/ex01/aula014ex copy.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Modelo de Exercício</title>
+    <title>Analisador de números</title>
 </head>
 <body onload="carregar()">
     <header>
-     <h1>Hora do Dia</h1>
-    </header>
+     <h1>Analisador de números</h1>
     <section>
         <div id="msg">
-         Aqui jás mensagem...
+         <p>Número (entre 0 e 100): <input type="number" name="numb" id="num"> <button id="verificar">Adicionar</button></p>
+        </div>
+        <div>
+            <select name="lista" id="list">
+                <option value="" id="item">Digite um valor</option>
+            </select>
+            <button id="clique">Finalizar</button>
+        </div>
+        <div id="res">
+        <p></p>
         </div>
     </section>
     <footer>
