--- a/aula016ex/ex01/aula014ex copy.html
+++ b/aula016ex/ex01/aula014ex copy.html
@@ -12,15 +12,12 @@
     <section>
         <div id="msg">
          <p>Número (entre 0 e 100): <input type="number" name="numb" id="num"> <button id="verificar">Adicionar</button></p>
-        </div>
-        <div>
-            <select name="lista" id="list">
-                <option value="" id="item">Digite um valor</option>
-            </select>
-            <button id="clique">Finalizar</button>
+         <br>
+         <select name="flista" id="flista" size="6"></select> <br>
+         <button id="finalizar">Finalizar</button>
         </div>
         <div id="res">
-        <p></p>
+
         </div>
     </section>
     <footer>
